@@ -30,6 +30,7 @@ Features / Enhancements:
 
 Tickets:
 	- Fixed #201: Cosmetics - An exception have been thrown at Login with wrong password
+	- Fixed #329: Bug - Custom DNS record - Syntax issue
 	- Fixed #345: Bug - admin - statistics
 	- Fixed #346: Cosmetics - SquirrelMail - Warning: mime.php on line 36
 	- Fixed #355: Defect - PHP Editor - When using ITK disabled functions must be hidden
